# xcin25

./: configure
cin/: Makefile.in
cin/big5/: 4corner.cin  Makefile.in  Rules  array30.cin  bims_pinyin.cin  cj.cin  cj.cin.cns11643  daibuun.cin  default.phr  ez.cin  hakka.cin  jyutping.cin  jyutping0.cin  phone.cin  pinyin.cin  pinyin0.cin  simplex.cin  simplex5.cin.utf-8  sys.cin.big5  sys.cin.big5hkscs  sys.cin.cns11643  sys.cin.utf-8  tcj.cin  telecode.cin  tlpa.cin  wm2.cin
cin/gb/: Makefile.in  Rules  default.phr  jtcj_gb.cin  phonegb2.cin  sys.cin.gb2312  sys.cin.gbk
cin/utf-8/: Makefile.in  Rules  phone.cin  sys.cin  tlpa.cin
doc/: Bugs  COPYING  CREDITS  Changes  Cin  FAQ  README  SETUP  Todo  Usage  UserGuide
doc/En/: README.En  SETUP.En  Usage.En  UserGuide.En
doc/En/internal/: module.En  structer.En
doc/history/: Changes-19991011
doc/internal/: IMdkit  gen_inp  gui_request  module  structer
doc/man/: Makefile.in  xcin.1
doc/modules/: bimsphone  gen_inp  im_comm  zh_hex
etc/: Makefile.in  xcinrc.CYGWIN  xcinrc.DARWIN  xcinrc.FREEBSD  xcinrc.HPUX  xcinrc.LINUX  xcinrc.NETBSD  xcinrc.UNKNOWN
po/: Makefile.in  fix-slash  run-fix  xcin-zh_TW.po  xcin.pot
script/: Makefile.in  README.autocf  Rules.in  acconfig.h  aclocal.m4  config.h.in  configure.in  ltmain.sh  makedep  noperl  pofix  send-pr
src/: .depend  Makefile.in  fkey.c  gui.c  gui_main.c  gui_main2.c  gui_menusel.c  gui_onspot.c  gui_overspot.c  module.c  xcin_main.c  xim.c  xim_IC.c
src/Cinput/: Makefile.in
src/Cinput/bimsphone/: .depend  Makefile.in  bimsphone.c  bimsphone.h  bimspinyin.c
src/Cinput/gen_inp/: .depend  Makefile.in  gen_inp.c  gen_inp.h
src/Cinput/im_comm/: .depend  Makefile.in  ascii_wb.c  charcode.c  keymap.c  qphrase.c
src/Cinput/zh_hex/: .depend  Makefile.in  zh_hex.c  zh_hex.h
src/include/: .cvsignore  IC.h  constant.h  fkey.h  gui.h  imodule.h  module.h  xcin.h  xcintool.h
src/lib/: Makefile.in
src/lib/IMdkit/: .depend  FrameMgr.c  FrameMgr.h  Makefile.in  i18nAttr.c  i18nIMProto.c  i18nIc.c  i18nMethod.c  i18nPtHdr.c
src/lib/charset/: .depend  Makefile.in  big5.c  big5hkscs.c  charset.c  charset.h  enclist.c  gb2312.c  gbk.c  utf8.c
src/lib/siod/: .depend  Makefile.in  example.c  siod.h  siod.html  siodp.h  slib.c  sliba.c  slibu.c
src/lib/xcintool/: .depend  Makefile.in  check_file.c  check_file_exist.c  check_version.c  copy_file.c  debug.c  extract_char.c  get_line.c  get_word.c  load_module.c  open_data.c  open_file.c  perr.c  set_data.c  set_locale.c  snprintf.c  stable_sort.c  strcmp_wild.c  wchs_len.c  wchs_to_mbs.c  xcin_malloc.c  xcin_rc.c  xcin_snprintf.c
src/util/: Makefile.in
src/util/cin2tab/: .depend  Makefile.in  bimscin.c  bimscin.h  cin2tab.c  cin2tab.h  gencin.c  gencin.h  syscin.c  syscin.h
src/util/testprog/: .depend  Makefile.in  README  testprog.c
src/util/testprog/po/: testprog-zh_TW.po  testprog.pot
